# lexroot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  example_langchain.py  pyproject.toml  render.yaml  requirements.txt  test_common_words_importer.py  test_data_quality_validator.py  test_germanic_origin_priority.py  test_langchain_plugin.py  test_senses_importer.py  test_shipley_importer.py  test_word_detective.py
Words/: english_words_primary_lexicon.csv  etymology_seed_database.csv  etymology_seed_database_v2.csv  morphemes.csv  readme.txt
alembic/: env.py
api/: deps.py  main.py  middleware.py  schemas.py  security.py
db/: crud.py  database.py  init_db.py  models.py
docs/: data_quality_standards.md  era_meanings.md  idiom_quality.md  render-deployment.md  senses_and_attestations.md  shipley.md  word_detective_quality.md
frontend/: index.html  kids.html  methodology.html  resources.html  robots.txt  sitemap.xml
ingestor/: base.py  common_words_pg_importer.py  data_quality_validator.py  definitions_importer.py  dotish_importer.py  etymology_db_importer.py  etymology_pipeline.py  etymwn_importer.py  frequency_importer.py  frequency_pg_importer.py  gcide_importer.py  graph_loader.py  kaikki_importer.py  lexicon_build_importer.py  medical_importer.py  migrate_schema.py  migrate_sources.py  morphemes_importer.py  neo4j_sync.py  open_english_wordnet_importer.py  research_triage_agent.py  scraper.py  seed_data.py  seed_db_importer.py  senses_importer.py  shipley_importer.py  (+9 more)
(+79 files in other folders)
