[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "living-lexicon"
version = "0.1.0"
description = "Etymology framework: historical word context, semantic drift, era-specific meanings"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
neo4j   = ["neo4j>=5.20.0"]
ollama  = ["langchain-ollama>=0.1.3", "langchain>=0.2.0"]
api     = ["fastapi>=0.111.0", "uvicorn[standard]>=0.29.0", "alembic>=1.13.0"]
ingest  = ["nltk>=3.8.1", "beautifulsoup4>=4.12.3"]
langchain = ["langchain>=0.2.0"]
dev     = ["pytest>=8.0", "pytest-asyncio>=0.23", "aiosqlite>=0.20", "httpx>=0.27.0"]
all     = ["living-lexicon[neo4j,ollama,api,ingest,langchain]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "test_langchain_plugin.py", "test_word_detective.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["living_lexicon*", "langchain_plugin*"]
